# NLP

./: .gitignore  README.md  pyproject.toml  requirements.txt
1. PyTorch (Regression + Classification)/: task.ipynb
1. PyTorch (Regression + Classification)/data/: mumbai_houses.csv
2. RNN LSTM GRU (Text Classification)/: citizens_reviews_text_classification.ipynb.ipynb  task.ipynb
3. Transformer GPT (Text Generation)/: gpt_tiny_stories_decoder_only.ipynb.ipynb  task.ipynb
3. Transformer GPT (Text Generation)/data/: TinyStories-test.txt
4. NLP Applications (HF Pipelines)/: task.ipynb
Extra 2. Word2Vec (Skip-Gram + CBOW)/: task.ipynb
Lectures/1. Введение/2. Векторные представления текстовых данных/: vector_text_representation.ipynb
Lectures/3. Трансформеры и альтернативные подходы/5. Продвинутые архитектуры рекуррентных нейронных сетей (xLSTM)/: lecture.ipynb
RAG Constitution Search/: rgr.ipynb
lab PyTorch/: lab.ipynb  Введение_в_PyTorch.ipynb
lab PyTorch/data/: heart.csv
lab_RNN/: lab.ipynb
nlp_lectures/1/: Предварительная_обработка_текстовых_данных.ipynb
nlp_lectures/1. Введение/1. Предварительная обработка текстовых данных/: text_preprocessing.ipynb
nlp_lectures/1. Введение/2. Векторные представления текстовых данных/: Предварительно_обученные_модели_для_векторизации_текстовых_данных_2024.ipynb
nlp_lectures/2/: vector_text_representation.ipynb
nlp_lectures/3/: rnn_lstm_gru_intro_v2.ipynb
nlp_tasks/main_tasks/: task_3.ipynb  task_5.ipynb
nlp_tasks/second_tasks/: task_1.ipynb  task_3.ipynb  task_4.ipynb
(+4 files in other folders)
