[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cleantext>=1.1.4",
    "gensim>=4.4.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "jupyterlab==4.1.5",
    "matplotlib>=3.10.9",
    "navec>=0.10.0",
    "nltk>=3.9.4",
    "notebook==7.1.2",
    "numpy==1.26.4",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pymorphy3>=2.0.6",
    "razdel>=0.5.0",
    "scikit-learn>=1.8.0",
    "scipy==1.11.4",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
]
